@@ -6,9 +6,11 @@ blkid
 bunzip2
 busybox
 bzcat
+bzimage2eva
 cksum
 debugfs
 e2*
+eva2bzimage
 eva2lzma
 eva_tools
 genext2fs
