@@ -1,7 +1,7 @@
 LZMA2EVA_SRC:=$(TOOLS_DIR)/make/lzma2eva/src
 LZMA2EVA_DIR:=$(TOOLS_SOURCE_DIR)/lzma2eva
 
-LZMA2EVA_TOOLS:=lzma2eva eva2lzma
+LZMA2EVA_TOOLS:=lzma2eva eva2lzma bzimage2eva eva2bzimage
 
 lzma2eva-unpacked: $(LZMA2EVA_DIR)/.unpacked
 $(LZMA2EVA_DIR)/.unpacked: $(wildcard $(LZMA2EVA_SRC)/*) | $(TOOLS_SOURCE_DIR) tar-host
