@@ -1,10 +1,10 @@
 CFLAGS=-Wall
 
-all: lzma2eva eva2lzma
+all: lzma2eva eva2lzma bzimage2eva eva2bzimage
 
 lzma2eva: LDLIBS+=-lz
 
 clean:
-	rm -f *.o lzma2eva eva2lzma
+	rm -f *.o lzma2eva eva2lzma bzimage2eva eva2bzimage
 
 .PHONY: all clean
